--- a/src/index.css
+++ b/src/index.css
@@ -97,3 +97,7 @@
 @import url(./blocks/popup/__label/popup__label.css);
 
 @import url(./blocks/popup/__submit/_disabled/popup__submit_disabled.css);
+
+body{
+    background-color: #000;
+}
