--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,8 @@
 
 @import url(./blocks/snapshots/__delete/snapshots__delete.css);
 
+@import url(./blocks/snapshots/__delete/_hidden/snapshots__delete_hidden.css);
+
 /*начало блока footer */
 
 @import url(./blocks/footer/footer.css);
